--- a/PartyAnalysis.ipynb
+++ b/PartyAnalysis.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "# Party Affiliation Data\n",
     "\n",
-    "## Date from Gallup Surveys"
+    "## Data from Gallup Surveys"
    ]
   },
   {
